<resources>
    <string name="app_name">Eighth Grade Activity Application</string>
    <string name="welcome">Welcome</string>
    <string name="studentID">Student ID:</string>
    <string name="studentIDExample">1234567 without S</string>
    <string name="options">Options For Activity Day</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="shirtprice">$12.95</string>
    <string name="totalPrice">Total Price To Pay:</string>
    <string name="zero">$0.00</string>
    <string name="addtoorder">Add to Order</string>
    <string name="sixflagsprice">$150.00</string>
    <string name="large">Large</string>
</resources>